Start Adding Ground

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lasers</title>
+    <title>The Hate Begins</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
+    <div id="background"></div>
 </body>
 </html>
