Add Multiple Textures for Buildings

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--  META TAGS  -->
     <meta charset="UTF-8">
     <title>The Hate Begins</title>
+
+    <!--  FAVICONS  -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <!--  STYLESHEETS  -->
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
